feat: optimization
